Add the gradle project

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -19,3 +19,9 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+  - package-ecosystem: "gradle"
+    directory: "/"
+    schedule:
+      interval: "daily"
+    ignore:
+    - dependency-name: "com.zaxxer:HikariCP"
