Add the composer project

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,3 +25,7 @@ updates:
       interval: "daily"
     ignore:
     - dependency-name: "com.zaxxer:HikariCP"
+  - package-ecosystem: "composer"
+    directory: "/"
+    schedule:
+      interval: "daily"
