--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,25 +7,31 @@ updates:
     ignore:
     - dependency-name: "rails"
       update-types: ["version-update:semver-patch"]
+    open-pull-requests-limit: 999
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 999
   - package-ecosystem: "pip"
     directory: "/"
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 999
   - package-ecosystem: "gomod"
     directory: "/"
     schedule:
       interval: "weekly"
+    open-pull-requests-limit: 999
   - package-ecosystem: "gradle"
     directory: "/"
     schedule:
       interval: "daily"
     ignore:
     - dependency-name: "com.zaxxer:HikariCP"
+    open-pull-requests-limit: 999
   - package-ecosystem: "composer"
     directory: "/"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 999
