Groups are a map not an array
See https://github.com/github/dependabot-api/pull/3987

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,7 +8,7 @@ updates:
     - dependency-name: "rails"
       update-types: ["version-update:semver-patch"]
     groups:
-    - dev-dependencies:
+      dev-dependencies:
         patterns:
         - "factory_*"
         - "rubo*"
