Update dependabot.yml to exclude another pattern

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -56,6 +56,7 @@ updates:
         - "net*"
         exclude-patterns:
         - "net.kyori*"
+        - "org.objenesis*"
   - package-ecosystem: "composer"
     directory: "/"
     schedule:
