--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,9 @@ updates:
         - "factory_*"
         - "rails"
         - "rubocop*"
+      empty-group:
+        patterns:
+        - "nothing-matches-this-on-purpose"
     open-pull-requests-limit: 999
   - package-ecosystem: "npm"
     directory: "/"
