--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,6 +10,9 @@ updates:
     groups:
       prod-dependencies:
         dependency-type: "production"
+        update-types:
+        - minor
+        - patch
       dev-dependencies:
         dependency-type: "development"
       empty-group:
