--- a/package.json
+++ b/package.json
@@ -7,19 +7,7 @@
     "": {
       "name": "npm-test",
       "version": "1.0.0",
-      "license": "ISC",
-      "dependencies": {
-        "fetch-factory": "^0.0.1",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-is": "^18.2.0",
-        "react-redux": "^8.0.5",
-        "react-router": "^6.8.0",
-        "react-router-dom": "^6.8.1"
-      },
-      "devDependencies": {
-        "etag": "^1.0.0"
-      }
+      "license": "ISC"
     },
     "node_modules/encoding": {
       "version": "0.1.12",
@@ -29,5 +17,17 @@
         "iconv-lite": "0.4.19"
       }
     }
+  },
+  "devDependencies": {
+    "etag": "^1.0.0"
+  },
+  "dependencies": {
+    "fetch-factory": "^0.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-router": "^6.15.0",
+    "react-router-dom": "^6.15.0"
   }
 }
