Split multi-dir config into two

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -13,6 +13,14 @@ updates:
   - package-ecosystem: "npm"
     directories:
       - "/frontend"
+    schedule:
+      interval: "weekly"
+    groups:
+      frontend:
+        patterns:
+        - "*"
+  - package-ecosystem: "npm"
+    directories:
       - "/backend/frontend"
     schedule:
       interval: "weekly"
